kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp_pred
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperatureprediction
  template:
    metadata:
      labels:
        app: temperatureprediction
    spec:
      imagePullSecrets:
        - name: gcr-creds
      containers:
      - name: temperatureprediction
        image: europe-west4-docker.pkg.dev/temperature-predictor-441809/temperature-prediction/temperature-prediction-fastapiserver:EA5636A3-E45A-4A90-AC91-A7EB4A95522B
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
