kubernetes/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: LoadBalancer
  selector: 
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
