kubernetes/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  type: LoadBalancer
  selector:
    app: mlflow
  ports:
  - port: 8080
    targetPort: 8080
