kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-postgress-service
  labels:
    app: mlflow
spec:
  selector:
    app: mlflow-postgres
  ports:
  - port: 5432
  clusterIP: None
