kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temperatureprediction
spec:
  type: LoadBalancer
  selector:
    app: temperatureprediction
  ports:
  - port: 8000
    targetPort: 8000
