kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mlflow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-service
            port:
              number: 8080
  - http:
      paths:
      - path: /server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
